# ocelescope

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  README.md  biome.json  docker-bake.hcl  docker-compose.dev.yml  docker-compose.yml  index.html  justfile  mkdocs.yml  objects.inv  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  pages.yml  publish-to-pypi.yml  release.yml
assets/: QEL_Inventory_Management_extended.xml  docker-compose.yaml
docs/: _config.yml  getting-started.md  index.md
docs/assets/: ResourceOverview.excalidraw  docker-compose.yaml  util.py
docs/evaluation/: plugin.md  tool.md
docs/plugins/: .nav.yml  extension.md  index.md  plugin_class.md  resource.md  structure.md  tutorial.md
docs/references/: .nav.yml  core.md  ocel.md
evaluation/plugin/: index.html
evaluation/tool/: index.html
plugins/: index.html
plugins/extension/: index.html
plugins/plugin_class/: index.html
plugins/resource/: index.html
plugins/structure/: index.html
plugins/tutorial/: index.html
references/core/: index.html
references/extensions/: index.html
references/filters/: index.html
references/plugins/: index.html
search/: search_index.json
src/backend/: .env.example  Dockerfile  app.py  dev.Dockerfile  entrypoint.sh  generate_openapi.py  index.py  main.py  pyproject.toml  registrar.py
src/backend/api/: config.py  dependencies.py  docs.py  middleware.py  session.py  websocket.py
src/backend/api/model/: base.py  ocel.py  plugin.py  resource.py  response.py  tasks.py
src/backend/app/: dependencies.py  main.py  middleware.py  sse_manager.py  websocket.py
src/backend/app/internal/: config.py  docs.py  registrar.py  session.py  utils.py
src/backend/app/internal/model/: annotations.py  base.py  discovery.py  events.py  ocel.py  plugin.py  resource.py
src/backend/app/internal/ocel/: default_ocel.py
src/backend/app/internal/registry/: __init__.py  extension.py  plugin.py  registry_manager.py  resource.py
src/backend/app/internal/tasks/: discovery_task.py  plugin.py  system.py  system_tasks.py
src/backend/app/internal/util/: filters.py  hashing.py  misc.py  pandas.py  stream_to_tempfile.py
src/backend/app/routes/: __init__.py  annotations.py  discovery.py  ocels.py  plugins.py  resources.py  session.py  tasks.py
src/backend/modules/ocelescope-module-ocelot/: pyproject.toml
src/backend/modules/ocelescope-module-ocelot/src/ocelescope_module_ocelot/: module.py  routes.py  util.py
src/backend/modules/ocelot/: module.py  util.py
src/backend/ocel/: default_ocel.py  utils.py
src/backend/ocelescope-backend/: pyproject.toml
src/backend/ocelescope-backend/src/ocelescope_backend/: cli.py  factory.py  generate_openapi.py  main.py
src/backend/ocelescope-backend/src/ocelescope_backend/app/: __init__.py  dependencies.py  factory.py  main.py  middleware.py
src/backend/ocelescope-backend/src/ocelescope_backend/app/internal/: docs.py  registrar.py  session.py  utils.py
src/backend/ocelescope-backend/src/ocelescope_backend/app/internal/model/: base.py  events.py  ocel.py  resource.py
src/backend/ocelescope-backend/src/ocelescope_backend/app/internal/ocel/: default_ocel.py
src/backend/ocelescope-backend/src/ocelescope_backend/app/internal/registry/: __init__.py  plugin.py  registry_manager.py
src/backend/ocelescope-backend/src/ocelescope_backend/app/internal/tasks/: plugin.py  system.py  system_tasks.py
src/backend/ocelescope-backend/src/ocelescope_backend/app/internal/util/: cache.py  dynamic_import.py  filters.py  misc.py
src/backend/ocelescope-backend/src/ocelescope_backend/app/modules/: __init__.py  base.py  loader.py
src/backend/ocelescope-backend/src/ocelescope_backend/app/routes/: ocels.py  plugins.py  resources.py  session.py  tasks.py
src/backend/ocelescope-ocelot/modules/ocelot/: module.py  util.py
src/backend/outputs/: registry.py
src/backend/outputs/vizualizations/: graphs.py
src/backend/plugins/: base.py  util.py
src/backend/prototype_plugins/berti/: __init__.py  plugin.py
src/backend/prototype_plugins/berti/discovery/: dfg.py  petri_net.py
src/backend/prototype_plugins/berti_plugin/: plugin.py  util.py
src/backend/prototype_plugins/berti_plugin/outputs/: oc_petri_net.py  ocdfg.py
src/backend/prototype_plugins/quantity_extension/: __init__.py  plugin.py  quantity_extension.py  resoure.py  util.py
src/backend/prototype_plugins/totem/: __init__.py  plugin.py  util.py
src/backend/prototype_plugins/totem/outputs/: totem.py
src/backend/registry/: __init__.py  extension.py  plugin.py  registry_manager.py  resource.py
src/backend/registry/registries/: plugin.py
src/backend/routes/: __init__.py  ocels.py  outputs.py  plugins.py  resources.py  session.py  tasks.py
src/backend/scripts/: generate_openapi.py
src/backend/tasks/: base.py  ocel.py  plugin.py  system.py
src/backend/util/: cache.py  tasks.py
src/frontend/: .dockerignore  Dockerfile  biome.json  dev.Dockerfile  next.config.ts  ocelescope.config.ts  orval.config.ts  package-lock.json  package.json
src/newFrontend/: .dockerignore  .gitignore  Dockerfile  biome.json  dev.Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
src/ocelescope/: .pre-commit-config.yaml  (+3 more)
template/: cookiecutter.json  pyproject.toml
template/{{cookiecutter.__project_slug}}/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
template/{{cookiecutter.__project_slug}}/.github/workflows/: build-and-release.yml
template/{{cookiecutter.__project_slug}}/scripts/: build_plugin.py  generate_plugin.py
template/{{cookiecutter.__project_slug}}/src/{{cookiecutter.__package_name}}/: __init__.py  plugin.py
template/{{cookiecutter.__project_slug}}/src/{{cookiecutter.__package_name}}/extensions/: example.py
template/{{cookiecutter.__project_slug}}/src/{{cookiecutter.__package_name}}/inputs/: example.py
template/{{cookiecutter.__project_slug}}/src/{{cookiecutter.__package_name}}/resources/: example.py
(+600 files in other folders)
