[project]
name = "ocelescope-workspace"
version = "0.1.0"
description = "Workspace for ocelescope package"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["src/ocelescope", "src/backend/ocelescope-backend"]

[tool.ruff.lint]
ignore = ["E731"]

[dependency-groups]
dev = [{ include-group = "lint" }]

lint = ["ruff>=0.15.7"]

docs = [
  "mkdocs>=1.6.1",
  "mkdocs-autorefs>=1.4.4",
  "mkdocs-awesome-nav>=3.3.0",
  "mkdocs-git-revision-date-localized-plugin>=1.5.1",
  "mkdocs-material>=9.7.6",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocstrings-python>=2.0.3",
]
repl = ["ipython-autotime>=0.3.2"]
