[project]
name = "ocean-backend"
version = "0.9.9"
description = ""
authors = [{ name = "Raimund Hensen", email = "raimund.hensen@rwth-aachen.de" }]
requires-python = "~=3.12"
dependencies = [
  "pm4py~=2.7.15.3",
  "pint>=0.23,<0.24",
  "pandas>=2.3.1",
  "numpy>=2.3.2",
  "cachetools>=6.1.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.2.1,<3",
  "fastapi[standard]>=0.112.2",
  "uvicorn>=0.28.0,<0.29",
  "python-multipart>=0.0.9,<0.0.10",
  "ocelescope",
]

[project.urls]
Repository = "https://github.com/rwth-pads/ocean"

[dependency-groups]
dev = [
  "jupyterlab>=4.0.7,<5",
  "dependentspy",
  "iso4>=0.0.2,<0.0.3",
  "seaborn>=0.13.0,<0.14",
  "matplotlib>=3.8.0,<4",
  "pre-commit>=4.2.0,<5",
]

[tool.uv]
package = false

[tool.uv.sources]
dependentspy = { git = "https://github.com/raihensen/dependentspy", branch = "main" }
ocelescope-tools = { git = "https://github.com/grkmr/ocelescope-tools.git" }
ocelescope = { git = "https://github.com/grkmr/ocelescope-tools.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
exclude = ["drafts", "data"]

[tool.ruff]
fix = true
lint.ignore = ["E731"]
exclude = ["*filters/config_union.py", "*resources/__init__.py"]
