[project]
name = "ocelescope-backend"
version = "0.1"
description = ""
authors = [
  { name = "Görkem-Emre Öztürk", email = "goerkem.emre.oeztuerk@gmail.com" },
  { name = "Raimund Hensen", email = "raimund.hensen@rwth-aachen.de" },
]
requires-python = "~=3.12"
dependencies = [
  "pm4py~=2.7.15.3",
  "pint>=0.23,<0.24",
  "pandas>=2.3.1",
  "numpy>=2.3.2",
  "cachetools>=6.1.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.2.1,<3",
  "fastapi[standard]>=0.112.2",
  "uvicorn>=0.28.0,<0.29",
  "python-multipart>=0.0.9,<0.0.10",
  "ocelescope",
]

[project.urls]
Repository = "https://github.com/rwth-pads/ocelescope"

[dependency-groups]
dev = [
  "jupyterlab>=4.0.7,<5",
  "dependentspy",
  "iso4>=0.0.2,<0.0.3",
  "seaborn>=0.13.0,<0.14",
  "matplotlib>=3.8.0,<4",
  "pre-commit>=4.2.0,<5",
]

[tool.uv]
package = false

[tool.uv.sources]
dependentspy = { git = "https://github.com/raihensen/dependentspy", branch = "main" }
ocelescope = { path = "../ocelescope", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
fix = true
lint.ignore = ["E731"]
exclude = ["*filters/config_union.py", "*resources/__init__.py"]
